Fix: Add root layout with metadatabase config and resolve build issues

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "local": "next dev -p 3000",
     "serve": "next dev",
     "build": "next build",
+    "build:static": "set NEXT_STATIC_EXPORT=true && next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
@@ -19,7 +20,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "clean": "if exist .next rmdir /s /q .next && if exist out rmdir /s /q out",
+    "clean": "if exist .next rmdir /s /q .next && if exist out rmdir /s /q out && if exist dist rmdir /s /q dist",
     "test:cms": "node scripts/test-connections.js"
   },
   "dependencies": {
