--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "local": "next dev -p 3000",
     "serve": "next dev",
-    "build": "next build",
+    "build": "set NEXT_STATIC_EXPORT=true && next build",
     "build:static": "set NEXT_STATIC_EXPORT=true && next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
