refactor(build): 优化静态导出配置并添加构建后处理
修改 next.config.js 移除不必要的 distDir 配置，专注于静态导出功能
在 package.json 中添加 postbuild 脚本处理构建输出文件

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "local": "next dev -p 3000",
     "serve": "next dev",
-    "build": "set NEXT_STATIC_EXPORT=true && next build",
-    "build:static": "set NEXT_STATIC_EXPORT=true && next build",
+    "build": "set NEXT_STATIC_EXPORT=true && next build && npm run postbuild",
+    "build:static": "set NEXT_STATIC_EXPORT=true && next build && npm run postbuild",
+    "postbuild": "if exist out rmdir /s /q out && mkdir out && xcopy .next\\server\\app\\*.html out\\ /s /y && xcopy .next\\static out\\_next\\static\\ /e /i /y",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
