feat: 添加静态导出配置和脚本支持
添加静态导出相关配置，包括路由缓存设置和构建脚本
新增静态导出脚本和禁用遥测脚本
更新.gitignore和构建配置
使用cross-env确保跨平台环境变量兼容性

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-.vscode
+
 # testing
 /coverage
 
@@ -36,3 +36,17 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+.idea
+
+# Temp files
+.temp
+.tmp
+.cache
