--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "local": "next dev -p 3000",
     "serve": "next dev",
-    "build": "set NEXT_STATIC_EXPORT=true && next build && npm run postbuild",
-    "build:static": "set NEXT_STATIC_EXPORT=true && next build && npm run postbuild",
-    "postbuild": "if exist out rmdir /s /q out && mkdir out && xcopy .next\\server\\app\\*.html out\\ /s /y && xcopy .next\\static out\\_next\\static\\ /e /i /y",
+    "build": "cross-env NEXT_STATIC_EXPORT=true next build",
+    "build:static": "cross-env NEXT_STATIC_EXPORT=true next build",
+    "postbuild": "node scripts/export-static.js",
+    "disable-telemetry": "node scripts/disable-telemetry.js",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
@@ -59,6 +60,7 @@
     "@types/node": "^20.8.9",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.4.31",
