feat(deploy): 添加 EdgeOne 静态部署支持
- 新增 EdgeOne 专用构建脚本和部署脚本
- 修改 next.config.js 支持静态导出模式
- 移除不兼容的 API 路由并添加静态数据文件
- 更新部署文档说明 EdgeOne 部署流程
- 添加静态文件测试服务器脚本

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "serve": "next dev",
     "build": "next build",
     "build:static": "next build",
+    "build:edgeone": "set EDGEONE_DEPLOY=true && next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
     "preview": "next build && next start",
+    "preview:static": "npm run build:edgeone && node scripts/test-static.js",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
