--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:edgeone",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps",
   "devCommand": "npm run dev",
