--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "local": "next dev -p 3000",
     "serve": "next dev",
-    "build": "next build",
-    "build:static": "next build",
-    "build:edgeone": "set EDGEONE_DEPLOY=true && next build",
+    "build": "EDGEONE_DEPLOY=true next build",
+    "build:static": "EDGEONE_DEPLOY=true next build",
+    "build:edgeone": "EDGEONE_DEPLOY=true next build",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
