--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,10 +37,11 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    ".next-build/types/**/*.ts",
     ".next/types/**/*.ts",
     "dist/types/**/*.ts",
     "next-env.d.ts",
-    ".next-build/types/**/*.ts"
+    "out/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
