--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "set EDGEONE_DEPLOY=true && next build",
     "build:static": "set EDGEONE_DEPLOY=true && next build",
     "build:edgeone": "next build --experimental-build-mode=compile",
-    "build:edgeone-static": "next build -c next.config.edgeone.js",
+    "build:edgeone-static": "node build-static.js",
+    "build:static": "node build-static.js",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
