--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "serve": "next dev",
     "build": "set EDGEONE_DEPLOY=true && next build",
     "build:static": "set EDGEONE_DEPLOY=true && next build",
-    "build:edgeone": "next build --experimental-build-mode=compile",
+    "build:edgeone": "set EDGEONE_DEPLOY=true && next build",
     "build:edgeone-static": "node build-static.js",
-    "build:static": "node build-static.js",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "start:prod": "next start -p 3000",
