--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "local": "next dev -p 3000",
     "serve": "next dev",
-    "build": "set EDGEONE_DEPLOY=true && next build",
-    "build:static": "set EDGEONE_DEPLOY=true && next build",
-    "build:edgeone": "set EDGEONE_DEPLOY=true && next build",
+    "build": "set EDGEONE_DEPLOY=true && next build && rimraf ./.next",
+    "build:static": "set EDGEONE_DEPLOY=true && next build && rimraf ./.next",
+    "build:edgeone": "set EDGEONE_DEPLOY=true && next build && rimraf ./.next",
     "build:edgeone-static": "node build-static.js",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
@@ -66,6 +66,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.2.2"
