--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "local": "next dev -p 3000",
     "serve": "next dev",
-    "build": "set EDGEONE_DEPLOY=true && next build && rimraf ./.next",
-    "build:static": "set EDGEONE_DEPLOY=true && next build && rimraf ./.next",
-    "build:edgeone": "set EDGEONE_DEPLOY=true && next build && rimraf ./.next",
+    "build": "set EDGEONE_DEPLOY=true && next build",
+    "build:static": "set EDGEONE_DEPLOY=true && next build",
+    "build:edgeone": "set EDGEONE_DEPLOY=true && next build",
     "build:edgeone-static": "node build-static.js",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
