refactor: 清理项目配置和移除无用文件
移除EdgeOne相关配置和部署文件
简化next.config.js配置
更新.gitignore和tsconfig.json
删除无用组件和依赖
添加MIT许可证文件

--- a/package.json
+++ b/package.json
@@ -4,56 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:3000": "next dev -p 3000",
-    "dev:3001": "next dev -p 3001",
-    "dev:3002": "next dev -p 3002",
-    "dev:turbo": "next dev --turbo",
-    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
-    "local": "next dev -p 3000",
-    "serve": "next dev",
-    "build": "set EDGEONE_DEPLOY=true && next build",
-    "build:static": "set EDGEONE_DEPLOY=true && next build",
-    "build:edgeone": "set EDGEONE_DEPLOY=true && next build",
-    "build:edgeone-static": "node build-static.js",
-    "build:analyze": "ANALYZE=true next build",
+    "build": "next build",
     "start": "next start",
-    "start:prod": "next start -p 3000",
-    "preview": "next build && next start",
-    "preview:static": "npm run build:edgeone && node scripts/test-static.js",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit",
-    "clean": "rmdir /s /q .next out dist 2>nul || echo cleaned",
-    "test:cms": "node scripts/test-connections.js"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.6",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@supabase/supabase-js": "^2.54.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
-    "gray-matter": "^4.0.3",
-    "lucide-react": "^0.537.0",
     "next": "15.1.6",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.5.0",
-    "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^4.0.1",
-    "sugar-high": "^0.9.3",
-    "swiper": "^9.3.2",
-    "tailwind-merge": "^3.3.1"
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
@@ -66,9 +28,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.3",
-    "tw-animate-css": "^1.3.6",
     "typescript": "^5.2.2"
   }
 }
