--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.0.6",
-    "next": "15.1.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.279.0",
+    "next": "14.0.0",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
