--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "remark-gfm": "^4.0.1",
     "swiper": "^9.3.2",
     "tailwind-merge": "^3.3.1"
   },
