--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "pnpm@8.15.8",
   "dependencies": {
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
