--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "packageManager": "pnpm@8.15.8",
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
