--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.279.0",
-    "next": "14.0.0",
+    "next": "^14.2.23",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -43,7 +43,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "^14.2.23",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
